# hkuSTAT25fall

./: README.md
7008/: LuTestDatasets.xls  README.md  requirements.txt
7008/backend/: README.md  __init__.py  database.py  import_excel_example.py  init_db.py  main.py
7008/backend/demoData/: README.md  __init__.py  generate_full_data.py  init_departments_positions.py  reset_and_init.py
7008/backend/models/: __init__.py  appraisal.py  config.py  department.py  employee.py  indicator.py  position.py  project.py  project_member.py  project_performance.py  token.py  user.py
7008/backend/routers/: __init__.py  appraisal.py  auth.py  data_import.py  department.py  employee.py  indicator.py  position.py  project.py  project_member.py  project_performance.py
7008/backend/schemas/: __init__.py  appraisal.py  common.py  department.py  employee.py  indicator.py  position.py  project.py  project_member.py  project_performance.py  user.py
7008/backend/services/: __init__.py
7008/backend/utils/: __init__.py  auth.py  excel_import.py  file_utils.py  kpi_config.py  security.py
7008/frontend/: README.md  package-lock.json  package.json  vue.config.js
7008/frontend/public/: index.html
7008/uploads/: README.md
8000/cplus/: CMakeLists.txt  README.md  build.sh  compile.bat  run.bat  run.sh
8000/cplus/include/: Layer.h  LinearLayer.h  Model.h  Tensor.h  Utils.h
8000/cplus/output/: accuracy_log_e2e.txt
8000/cplus/src/: LinearLayer.cpp  Model.cpp  main.cpp
8000/sql/: MovieAnalysis.accdb  README.md
8000/vba/: QuantizationAnalysis.xlsm  README.md
(+41 files in other folders)
